fix(fontconfig): font names typo

--- a/fontconfig/.config/fontconfig/conf.d/45-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-latin.conf
@@ -13,7 +13,7 @@
 		<default><family>serif</family></default>
 	</alias>
 	<alias>
-		<family>Noto Serif</family>
+		<family>NotoSerif Nerd Font</family>
 		<default><family>serif</family></default>
 	</alias>
 	<alias>
@@ -23,11 +23,11 @@
 
 	<!-- Sans Serif -->
 	<alias>
-		<family>DejaVu Sans</family>
+		<family>DejaVuSansM Nerd Font</family>
 		<default><family>sans-serif</family></default>
 	</alias>
 	<alias>
-		<family>Noto Sans</family>
+		<family>NotoSans Nerd Font</family>
 		<default><family>sans-serif</family></default>
 	</alias>
 	<alias>
@@ -37,11 +37,11 @@
 
 	<!-- Monospaced -->
 	<alias>
-		<family>Hack</family>
+		<family>Hack Nerd Font Mono</family>
 		<default><family>monospace</family></default>
 	</alias>
 	<alias>
-		<family>DejaVu Sans Mono</family>
+		<family>DejaVuSansM Nerd Font Mono</family>
 		<default><family>monospace</family></default>
 	</alias>
 	<alias>
