--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -10,7 +10,7 @@
   <alias>
     <family>serif</family>
     <prefer>
-      <family>Noto Serif</family>
+      <family>NotoSerif Nerd Font</family>
       <family>Liberation Serif</family>
     </prefer>
     <default>
@@ -21,20 +21,20 @@
     <family>sans-serif</family>
     <prefer>
       <family>Roboto</family>
-      <family>Noto Sans</family>
+      <family>NotoSans Nerd Font</family>
       <family>Liberation Sans</family>
     </prefer>
     <default>
-      <family>DejaVu Sans</family>
+      <family>DejaVuSansM Nerd Font</family>
     </default>
   </alias>
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Hack</family>
+      <family>Hack Nerd Font Mono</family>
     </prefer>
     <default>
-      <family>DejaVu Sans Mono</family>
+      <family>DejaVuSansM Nerd Font Mono</family>
     </default>
   </alias>
 </fontconfig>
