feat(dmscripts): update config to revision _23

--- a/dmscripts/.config/dmscripts/config
+++ b/dmscripts/.config/dmscripts/config
@@ -7,8 +7,14 @@
 
 # Defined variables, modify anything in quotes to your prefered software
 
+# IMPORTANT! Keep the '-p' flag at the end of the DMENU and RMENU variables.
+# Also, keep the '--prompt' flag at the end of the FMENU variable.
+# These are needed as we use prompts in the scripts.
 DMENU="dmenu -i -l 20 -p"
-# DMENU="rofi -dmenu"
+FMENU="fzf --border=rounded --margin=5% --color=dark --height 100% --reverse --header=$(basename "$0") --info=hidden --header-first --prompt"
+RMENU="rofi -dmenu -p"
+
+PDF_VIEWER="zathura"
 
 # DMBROWSER="brave"
 DMBROWSER="qutebrowser"
@@ -23,7 +29,34 @@ DMEDITOR="${DMTERM} nvim"
 logout_locker='slock'
 # logout_locker='dm-tool lock'
 
-# dm-bookman 
+
+# This case statement lets you change what the DMENU variable is for different scripts, so if you
+# want a unique variable for each script you can
+# syntax is as follows:
+# "<ending-of-script>") DMENU="your variable here"
+# *) should be left blank, global variables are defined above
+
+# include -p in standard dmenu as we use prompts by default
+case "${0##*-}" in
+#  "colpick") DMENU="dmenu -i -p";;
+#  "confedit") DMENU="dmenu -i -l 30 -p";;
+#  "youtube") DMBROWSER="firefox";;
+  *);;
+esac
+
+# "${0##*-}" means grab the 0th argument (which is always the path to the program) starting from the
+# last dash. This gives us the word after the - which is what we are searching for in the case
+# statement. ie dm-man -> man
+
+# An awk equivalent is: 
+# awk -F"-" '{print $NF}'
+# Sadly cut has no easy equivalent
+
+# TODO: Move almost all of these variables into the case statement
+# TODO: Make some of the more useful ones general variables
+# IE a pictures directory, an audio directory, config locations, etc
+
+# dm-bookman
 bookman_show_source=1
 
 # dm-sounds
@@ -31,13 +64,18 @@ sounds_dir="${HOME}/.config/dmscripts/dmsounds"
 
 # dm-setbg
 setbg_dir="${HOME}/Pictures/wallpapers"
+# Set this to 1 if you want to use imv and wayland, 0 if you want to use sxiv
+# Note that sxiv is X11 only, you need to mark the image you want to use.
+use_imv=0 
 
 # dm-maim
 maim_dir="${HOME}/Pictures/screenshots"
 maim_file_prefix="maim"
 
+# dm-note
+note_dir="${HOME}/.config/dmscripts/dmnote"
+
 # dm-confedit
-confedit_editor="$DMEDITOR"
 declare -A confedit_list
 confedit_list[confedit]="$HOME/.config/dmscripts/config"
 confedit_list[alacritty]="$HOME/.config/alacritty/alacritty.yml"
@@ -98,7 +136,6 @@ declare -a reddit_list=(
 )
 
 # Search engine config 
-websearch_browser="$DMBROWSER"
 declare -A websearch
 # Syntax:
 # websearch[name]="https://www.example.com/search?q="
@@ -141,12 +178,37 @@ websearch[stackoverflow]="https://stackoverflow.com/search?q="
 # Etc
 
 # dm-youtube config
-youtube_browser="$DMBROWSER"
 # Think of these as your "subscribed channels", name the channel in the square brackets then put the channel URL in the quotation marks
 # Syntax: youtube_channels[name]="https://www.youtube.com/link/to/channel"
 
 declare -A youtube_channels
 youtube_channels[distrotube]="https://www.youtube.com/c/DistroTube/featured"
+
+# dm-radio config
+# Your list of online radio stations for the dm-radio script.
+# Syntax: radio_stations[name]="https://www.zeno.fm/radio/your-station"
+# dmradio-volume ranges between -1 and 100 (for mplayer) or 0-100 (for mpv)
+
+DMRADIOVOLUME="100"
+declare -A radio_stations
+radio_stations[Oldies Radio 50s-60s]="https://zeno.fm/radio/oldies-radio-50s-60s/"
+radio_stations[Oldies Radio 70s]="https://zeno.fm/radio/oldies-radio-70s/"
+radio_stations[Unlimited 80s]="https://zeno.fm/radio/unlimited80s/"
+radio_stations[80s Hits]="https://zeno.fm/radio/80shits/"
+radio_stations[90s Hits]="https://zeno.fm/radio/90s_HITS/"
+radio_stations[2000s Pop]="https://zeno.fm/radio/2000s-pop/"
+radio_stations[The 2000s]="https://zeno.fm/radio/the-2000s/"
+radio_stations[Hits 2010s]="https://zeno.fm/radio/helia-hits-2010/"
+radio_stations[Classical Radio]="https://zeno.fm/radio/classical-radio/"
+radio_stations[Classical Relaxation]="https://zeno.fm/radio/radio-christmas-non-stop-classical/"
+radio_stations[Classic Rock]="https://zeno.fm/radio/classic-rockdnb2sav8qs8uv/"
+radio_stations[Gangsta49]="https://zeno.fm/radio/gangsta49/"
+radio_stations[HipHop49]="https://zeno.fm/radio/hiphop49/"
+radio_stations[Madhouse Country Radio]="https://zeno.fm/radio/madhouse-country-radio/"
+radio_stations[PopMusic]="https://zeno.fm/radio/popmusic74vyurvmug0uv/"
+radio_stations[PopStars]="https://zeno.fm/radio/popstars/"
+radio_stations[RadioMetal]="https://zeno.fm/radio/radio-metal/"
+radio_stations[RocknRoll Radio]="https://zeno.fm/radio/rocknroll-radio994c7517qs8uv/"
 
 # dm-colpick config
 declare -A colpick_list
@@ -171,11 +233,18 @@ colpick_list[purple]="#bd9cf9"
 # lang_map[English]=en
 # lang_map[Automatic]=auto
 
-# dm-weather
-declare -A weather_location
-# weather_location[New York]="New+York"
-# weather_opts="m" # Always use metric units (celsius)
-# weather_opts="u" # Always use US units (fahrenheit)
-# see: https://github.com/chubin/wttr.in
+# dm-weather config
 
-_revision=16
+# Example: set the default search parameters to Texas, Paris and Kyiv
+# weather_locations="Texas, United States
+# Paris, France
+# Kyiv, Ukraine"
+weather_locations=""
+
+# use the weather_opts variable to set additional flags:
+# weather_opts="flag1&flag2&flag3=somevalue"
+
+# for full details see: https://github.com/chubin/wttr.in
+
+# current revision (do not touch unless you know what you're doing)
+_revision=23
